# pylandmarker

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: face_detector.yaml  facemesh_detector.yaml  palm_detector.yaml  pose_detector.yaml
landmarker/: __init__.py  helpers.py  predictor.py
landmarker/commons/: mesh.py
landmarker/models/: __init__.py  base_detector.py  face_detector.py  facemesh_detector.py  palm_detector.py  pose_detector.py
scripts/: run_on_single_image.py
tests/unit/: test_face_detector.py  test_facemesh_detector.py  test_palm_detector.py  test_pose_detector.py
